clean error 404 page

--- a/web_gui/acct/error404.html
+++ b/web_gui/acct/error404.html
@@ -1,28 +1,21 @@
-<table border="1">
-    <tr>
-	<th rowspan='4'>XXXXX</th>
-	<th rowspan='2'>file</th>
-	<td>1</td>
-	<td>542121</td>
-	<td>125</td>
-    </tr>
-    <tr>
-	<td>3</td>
-        <td>87541</td>
-        <td>121</td>
-    </tr>
-    <tr>
-        <th rowspan='2'>dir</th>
-        <td>5</td>
-        <td>887541</td>
-        <td>321</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>365541</td>
-        <td>191</td>
-    </tr>
-</table>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
+    <head>
+        <title>Robinhood Report</title>
+        <style type="text/css" title="currentStyle">
+            @import "app/templates/css/style.css";
+        </style>
+    </head>
 
-<br><br>
+    <body>
+        <div id="top_panel">
+            <img src="app/img/logo_rh_sf.gif" alt="Logo Robinhood"/>
+            <h1>Robinhood Policy Engine</h1>
+            <img src="app/img/logoCEA20.jpg" alt="Logo CEA"/>
+        </div>
+        <center>
+            <div id="error">ERROR 404: URL unreachable</div>
+       </center>
+    </body>
+</html>
 
